@@ -140,99 +140,19 @@ $num = $m->comp('/widgets/container_prof/container_prof.mc',
 %        caption => "Categories",
 %        number  => $num++);
 
-% my @cat = $story->get_categories;
-% my $primary = $story->get_primary_category();
-% my $p_id    = $primary ? $primary->get_id : '';
-% my $rowspan = scalar (@cat) + 2;
-
-<table class="listManager">
-<tr>
-  <th><% $lang->maketext('Name') %></th>
-  <th><% $lang->maketext('URI') %></th>
-  <th class="radio"><% $lang->maketext('Primary') %></th>
-  <th class="checkbox"><% $lang->maketext('Delete') %></th>
-</tr>
-% # BEGIN FOREACH CAT
-% my $curr_cats = {};
-% foreach (sort { $a->get_uri cmp $b->get_uri } @cat) {
-%     my $cat_id = $_->get_id;
-%     $curr_cats->{$cat_id} = 1;
-  <tr>
-    <td><% $_->get_name %></td>
-    <td><% $_->get_uri %></td>
-    <td class="radio">
-<& "/widgets/profile/radio.mc",
-    disp        => '',
-    value       => $_->get_id,
-    name        => "$widget|primary_cat",
-    js          => '',
-    req         => 0,
-    checked     => ($cat_id == $p_id),
-&>
-    </td>
-    <td class="checkbox">
-% if ($cat_id != $p_id) {
-<& '/widgets/profile/checkbox.mc',
-        name => "$widget|delete_cat",
-        value => $_->get_id
-&>
-% }
-&nbsp;
-    </td>
-  </tr>
-% }
-% # END FOREACH CAT
-
-
-% if (!@cat) {
-<tr>
-  <td colspan="4"><% $lang->maketext('This story has not been assigned to a category.')%></td>
-</tr>
-% } else {
-
-<tr>
-  <td colspan="3">&nbsp;</td>
-  <td align="center" valign="middle">
-  <& '/widgets/profile/button.mc',
-    disp      => $lang->maketext("Delete Categories"),
-    widget    => $widget,
-    cb        => 'delete_cat_cb',
-    button    => 'delete_red',
-    useTable  => 0 &>
-  </td>
-</tr>
-% }
-
-</table>
-% # Create the subroutine to exclude categories.
-% my $excl_sub = sub { $curr_cats->{$_[0]->get_id} || ! chk_authz($_[0], READ, 1) };
-
-<div class="actions">
-<&
-  '/widgets/profile/imageSubmit.mc',
-             formName => "theForm",
-             callback => "$widget|add_category_cb",
-             image    => "add_category_lgreen",
-             alt      => 'Add Category',
-             vspace   => 3,
-             hspace   => 2
-&>
-<& '/widgets/select_object/select_object.mc',
-        object => 'category',
-        name => "$widget|new_category_id",
-        constrain => { site_id => $story->get_site_id },
-        exclude => $excl_sub,
-        field => 'uri',
-        sort_field => 'uri',
-        useTable => 0
-&>
+<div id="categories">
+    <& 'list_categories.html',
+        story => $story,
+        categories => [ $story->get_categories ],
+        primary_category_id => $story->get_primary_category->get_id
+    &>
 </div>
 
-<%perl>;
-$m->comp("/widgets/wrappers/table_bottom.mc");
+<& "/widgets/wrappers/table_bottom.mc" &>
 
-}   # unless ENABLE_CATEGORY_BROWSER
+% }   # unless ENABLE_CATEGORY_BROWSER
 
+<%perl>
 if (ENABLE_OC_ASSET_ASSOCIATION) {
     $m->comp('/widgets/profile/asset_ocs.mc',
              asset  => $story,
